# leikljoslinjer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Dependencies/tinycthread/: tinycthread.c  tinycthread.h
include/: geometry.h  image.h  linalg.h  scene.h
source/: geometry.c  image.c  linalg.c  main.c  scene.c
